[package]
name = "statusbar"
version = "0.1.0"
edition = "2018"

[dependencies]
cairo-rs = { version = "0.15.11", features = ["xcb"] }
cairo-sys-rs = "0.15.1"
chrono = "0.4.19"
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
systemstat = "0.1.11"
tokio = { version = "1.18.2", features = ["full"] }
toml = "0.5.9"
whoami = "1.2.1"
xcb = { version = "0.10.1", features = ["xkb"] }
xcb-util = { version = "0.4.0", features = ["ewmh", "keysyms", "thread"] }
